# beginner-investor-api

./: .dockerignore  .env  .env.database  .env.development  .env.example  .env.production  .env.render  .env.template  .gitignore  .render.yaml  DEPLOYMENT.md  Makefile  PRODUCTIVITY_SETUP_GUIDE.md  PRODUCT_TIER_CONFIGURATION.md  README.md  README.mmd  REDIS_INTEGRATION.md  build-services.ps1  buildx-services.ps1  cloud-build.ps1  deploy-to-render.ps1  deploy-to-render.sh  deployment-config.json  dev-setup.ps1  docker-compose.yml  dockerignore.txt  lighthouserc.json  migrate.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  shutdown.sh  startup.sh  stripe-reference-implementation.js  tsconfig.json
.github/: codeql-config.yml  dependabot.yml
_deprecated_frontend/: ERROR_BOUNDARY_IMPLEMENTATION_GUIDE.md  firebase-config-template.ts  jest.config.js
clean-build/: Dockerfile
config/: redis-config.conf
docs/: PERFORMANCE-OPTIMIZATION.md  Production Microservices CI-CD Setup Guide.md  README.md  deployment_guide.md  env-template.sh  filestructure-completetionguide.md  learning_hub_gamification.js  newestreadme.md  render_dockerfile.txt  service_architecture.md  service_communication.md  tool_specific_dockerfiles.md  top-guilde.md  website.finder
frontend/: .env.local  .env.local.example  .eslintrc.js  .gitignore  Dockerfile  README.md  environment-variables-template.md  firebase-config-template.ts  jest.config.js  lighthouse-report.json  next.config.js  package-lock.json  package.json  performance-optimization-dependencies.json  (+5 more)
services/python-risk-engine/: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.python  Makefile  README.md  app.py  pyproject.toml  requirements.txt  test_risk_engine.py
services/python-risk-engine/app/: __init__.py  main.py
services/python-risk-engine/app/ai/: __init__.py
services/python-risk-engine/app/algorithms/: monte_carlo.py  var_calculator.py
services/python-risk-engine/app/api/: __init__.py
services/python-risk-engine/app/api/v1/: __init__.py  api.py
services/python-risk-engine/app/api/v1/endpoints/: __init__.py  health.py
services/python-risk-engine/app/core/: __init__.py  config.py  logging.py  security.py
services/python-risk-engine/app/db/: base.py  session.py
services/python-risk-engine/app/middleware/: rate_limiter.py  validation.py
services/python-risk-engine/app/models/: risk_metrics.py
services/python-risk-engine/app/routes/: health.py
services/python-risk-engine/app/schemas/: __init__.py  ai_models.py  auth.py  base.py  common.py
services/python-risk-engine/app/services/: risk_calculator.py
services/python-risk-engine/app/utils/: circuit_breaker.py  health.py  retry.py
services/python-risk-engine/grafana/dashboards/: python-engine-dashboard.json
services/python-risk-engine/grafana/provisioning/dashboards/: dashboard.yml
services/python-risk-engine/grafana/provisioning/datasources/: datasource.yml
services/python-risk-engine/prometheus/: alert.rules.yml  prometheus.yml
services/python-risk-engine/promtail/: promtail-config.yml
services/python-risk-engine/scripts/: init-db.sh
services/python-risk-engine/src/: app.py
services/python-risk-engine/src/algorithms/: monte_carlo.py  var_calculator.py
services/python-risk-engine/src/models/: risk_metrics.py
services/python-risk-engine/src/services/: __init__.py  risk_calculator.py
(+867 files in other folders)
